--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,1 +1,45 @@
-<p>login works!</p>
+<form [formGroup]="loginForm" (ngSubmit)="LoginUser()">
+    <div class="form-group row">
+        <h2>User Login</h2>
+    </div>
+
+    <div class="form-group row">
+        <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
+        <div class="col-sm-10">
+            <input type="email" class="form-control" id="inputEmail3" formControlName="email" placeholder="Vishnu@gmail.com" [class.is-invalid]="loginForm.get('email')!.invalid && loginForm.get('email')!.touched" />
+
+            <div *ngIf=" loginForm.get('email')!.errors
+          && (loginForm.get('email')!.invalid || loginForm.get('email')!.touched) ">
+                <small class="text-danger" *ngIf="
+                  loginForm.get('email')!.errors!.required &&
+                  loginForm.get('email')!.touched
+          ">
+          Email is required
+        </small>
+                <small class="text-danger" *ngIf="loginForm.get('email')!.errors!.pattern">
+          Email is invalid
+        </small>
+            </div>
+        </div>
+
+    </div>
+
+    <div class="form-group row">
+        <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
+        <div class="col-sm-10">
+            <input type="password" class="form-control" id="inputPassword3" placeholder="Password" formControlName="password" [class.is-invalid]="loginForm.get('password')!.invalid && loginForm.get('password')!.touched" />
+            <small *ngIf="
+          loginForm.get('password')!.invalid &&
+          loginForm.get('password')!.touched
+          " class="text-danger">
+          Password is required
+        </small>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-sm-10">
+            <button type="submit" class="btn btn-primary">Login</button>
+        </div>
+    </div>
+</form>
