--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -36,6 +36,9 @@
         </small>
         </div>
     </div>
+    <div class="form-group row   d-flex flex-row-reverse ">
+        <a (click)="forgotPassword()" style="cursor: pointer;" class="btn-link">forgot Password</a>
+    </div>
 
     <div class="form-group row">
         <div class="col-sm-10">
