--- a/src/app/common/navmenu/navmenu.component.html
+++ b/src/app/common/navmenu/navmenu.component.html
@@ -1,5 +1,4 @@
-<nav class="navbar navbar-expand-md bg-primary navbar-dark  mb-4">
-
+<nav class="navbar navbar-expand-md bg-primary navbar-dark mb-4">
     <a class="navbar-brand" href="/">Edureka FoodOrb</a>
     <!-- <button
   class="navbar-toggler"
@@ -21,7 +20,11 @@
                 <a class="nav-link" routerLink="/users">Users</a>
             </li>
             <li *ngIf="authStatus != ''" class="nav-item" routerLinkActive="active">
-                <a class="nav-link" routerLink="/orders">Orders</a>
+                <a class="nav-link" routerLink="/orders">Orders
+          <span class="badge badge-warning" id="lblCartCount">
+            {{ orders.length }}
+          </span>
+        </a>
             </li>
         </ul>
         <div class="mt-2 mt-md-0">
@@ -32,6 +35,9 @@
                 <li *ngIf="authStatus == ''" class="nav-item" routerLinkActive="active">
                     <a class="nav-link" routerLink="/auth/login">Login</a>
                 </li>
+
+
+
                 <li *ngIf="authStatus != ''" class="nav-item" routerLinkActive="active">
                     <a class="nav-link" routerLink="/settings">Settings</a>
                 </li>
