--- a/src/app/userfeed/userfeedDetails/userfeed-details/userfeed-details.component.html
+++ b/src/app/userfeed/userfeedDetails/userfeed-details/userfeed-details.component.html
@@ -9,7 +9,7 @@
             <h5 class="card-title"> {{ userfeed.name }} </h5>
             <p class="card-text">Quantity: 1</p>
             <p class="card-text">Amount: {{userfeed.cost | currency:'INR' }} </p>
-            <button class="btn-primary" (click)="addtoCart()">Add to Cart</button>
+            <button class="btn-primary" (click)="addtoCart(userfeed)">Add to Cart</button>
         </div>
 
     </div>
