--- a/src/app/users/userdetails/userdetails.component.html
+++ b/src/app/users/userdetails/userdetails.component.html
@@ -7,7 +7,13 @@
             <h4 class="card-title">{{ user.name }}</h4>
             <p class="card-text">{{ user.email }}</p>
             <p class="card-text">{{ user.created_at | date }}</p>
+            <div class="float-right">
+                <button class="btn-primary" (click)="backUsers()">
+              back
+            </button>
+            </div>
         </div>
+
     </div>
 </div>
 
